<?xml version="1.0"?>
<package>
  <name>sara_navigation_relaxed_astar</name>
  <version>0.0.0</version>
  <description>The sara_navigation_relaxed_astar package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="me@maximest-pierre.me">Maxime St-Pierre</maintainer>

  <license>Apache 2.0</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    
    <nav_core plugin="${prefix}/relaxed_astar_planner_plugin.xml"/>

  </export>
</package>
